--- a/src/scenes/global/sidebar/Sidebar.less
+++ b/src/scenes/global/sidebar/Sidebar.less
@@ -6,7 +6,21 @@
 }
 
 .sidebar-container {
-    background-color: #f2f5f8;
+    // background-color: #f2f5f8;
+    background-color: white;
+    min-height: 100vh;
+    min-height: 100vh;
+
+    // position: fixed;
+    // height: 100vh;
+    // box-sizing: border-box;
+
+    // flex: 1;
+    // padding: 20px;
+    // box-sizing: border-box;
+    // overflow-y: auto;
+    
+
 }
 
 .arrow {
