--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,10 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Source Sans 3', sans-serif;
 }
+
+/* body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+} */
+
