--- a/src/scenes/dashboard/dashboard.less
+++ b/src/scenes/dashboard/dashboard.less
@@ -15,6 +15,7 @@ a {
     background-color: #f9f9f9;
     padding: 30px;
     scroll-behavior: smooth;
+    // max-width: 95vw;
 }
 
 .header-wrapper {
@@ -39,6 +40,7 @@ a {
 }
 .widgets {
     margin-left: 90.7rem;
+    // margin-right: auto;
     
 }
 
@@ -164,7 +166,7 @@ a {
 
 .ss-container {
     // background-color:#18d06b;
-    width: 798px;
+    max-width: 798px;
 
     display: flex;
     flex-direction: row;
@@ -346,4 +348,16 @@ a {
     justify-content: center;
     margin: 20px auto 10px ;
     
+}
+
+// ---
+@media (max-width : 1994px ) {
+ .dashboard-container{
+}
+.recent-container {
+} 
+
+.timeSheet-container {
+}
+
 }
