--- a/src/scenes/global/topbar/Topbar.less
+++ b/src/scenes/global/topbar/Topbar.less
@@ -1,11 +1,22 @@
 @text-grey : #617083;
+@grey-bg: #f9f9f9;
+@grey-font: #2b343f;
+@grey-border: #e9edf2;
+@white: #ffffff;
+
+@card-title: #617083;
+@card-value: #2b343f;
+@card-dots: #79899d;
+
 
 .topbar-container {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     height: 46px;
-    background-color: white;
+    background-color: rgba(229, 229, 229, 0.807);
+    border-bottom: 1px solid rgba(77, 76, 76, 0.184);
+
 }
 
 .icons-container {
