--- a/src/scenes/global/topbar/Topbar.css
+++ b/src/scenes/global/topbar/Topbar.css
@@ -3,7 +3,8 @@
   flex-direction: row;
   justify-content: flex-end;
   height: 46px;
-  background-color: white;
+  background-color: rgba(229, 229, 229, 0.807);
+  border-bottom: 1px solid rgba(77, 76, 76, 0.184);
 }
 .icons-container {
   display: flex;
