--- a/src/scenes/global/topbar/Topbar.less
+++ b/src/scenes/global/topbar/Topbar.less
@@ -24,7 +24,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-size: 25px;
+    font-size: 20px;
     color: @text-grey;
     margin-top: 5px;
     cursor: pointer;
@@ -43,18 +43,22 @@
 }
 
 .company-account {
-    width: 25px;
-    height: 25px;
+    width: 23px;
+    height: 23px;
     border-radius: 50%;
     background-color: #5c7d9a;
     color: white;
     text-align: center;
     margin-left: 15px;
-    margin-top: 0;    
+    margin-top: 0; 
+    margin-top: -3px;
+   
+
 }
 
 .company-account p{
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
     padding-right: 10px;
+    margin-left: -3px;
 }
