--- a/src/scenes/timesheets/timesheets.css
+++ b/src/scenes/timesheets/timesheets.css
@@ -7,18 +7,21 @@
   max-width: 100vw;
   display: flex;
   flex-direction: column;
+  padding: 0 10px;
 }
 .row-one {
   display: flex;
   flex-direction: row;
   align-items: center;
+  height: 50px;
+  margin-top: 25px;
 }
 .row-two {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 3px;
+  margin-top: 2px;
   margin-bottom: 6px;
 }
 .row-three {
