--- a/src/scenes/timesheets/timesheets.less
+++ b/src/scenes/timesheets/timesheets.less
@@ -19,6 +19,7 @@
     max-width: 100vw;
     display: flex;
     flex-direction: column;
+    padding: 0 10px;
 
 }
 
@@ -27,6 +28,8 @@
     flex-direction: row;
     // justify-content: space-between;
     align-items: center;
+    height: 50px;
+    margin-top: 25px;
 }
 
 .row-two {
@@ -34,7 +37,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 3px;
+    margin-top: 2px;
     margin-bottom: 6px;
 }
 
@@ -52,6 +55,7 @@
     color: @grey-font;
     font-size: 30px;
     margin-right: 30rem;
+    // margin-bottom: 0;
 }
 .row-one div {
     font-weight: lighter;
