updates in timesheets

--- a/src/scenes/timesheets/timesheets.less
+++ b/src/scenes/timesheets/timesheets.less
@@ -8,10 +8,11 @@
 @card-dots: #79899d;
 @blue-icon: #2aa7ff;
 
-.timeSheet-container{
+.timeSheet-container-main{
     background-color: @grey-bg;
-    max-width: 100vw;
+    // max-width: 95vw;
     margin: 0;
+    // max-width: 100%;
 
 }
 
@@ -19,7 +20,7 @@
     max-width: 100vw;
     display: flex;
     flex-direction: column;
-    padding: 0 10px;
+    padding: 0 45px;
 
 }
 
@@ -102,10 +103,12 @@
 
 
 .timesheets-table-container {
-    background-color: pink;
+    // background-color: pink;
     // width: 100rem;
     max-width: 100%;
     margin: 50px 0;
+        padding: 0 40px;
+
 }
 
 
