--- a/src/scenes/timesheets/timesheets.css
+++ b/src/scenes/timesheets/timesheets.css
@@ -1,13 +1,12 @@
-.timeSheet-container {
+.timeSheet-container-main {
   background-color: #f9f9f9;
-  max-width: 100vw;
   margin: 0;
 }
 .timesheet-header {
   max-width: 100vw;
   display: flex;
   flex-direction: column;
-  padding: 0 10px;
+  padding: 0 45px;
 }
 .row-one {
   display: flex;
@@ -73,9 +72,9 @@
   margin: 0;
 }
 .timesheets-table-container {
-  background-color: pink;
   max-width: 100%;
   margin: 50px 0;
+  padding: 0 40px;
 }
 .timesheet-table {
   border: 1px solid #e9edf2;
