--- a/src/scenes/timesheets/timesheets.less
+++ b/src/scenes/timesheets/timesheets.less
@@ -91,10 +91,16 @@
 }
 
 .row-two-right {
+    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
+}
+.row-two-right .filter-btn {
+    margin-left: 20px;
+    // border: 1px solid #2aa7ff;
+    // color: #2aa7ff;
 }
 
 .row-two-right div>p{
