--- a/src/scenes/global/topbar/Topbar.css
+++ b/src/scenes/global/topbar/Topbar.css
@@ -14,6 +14,7 @@
   font-size: 20px;
   color: #617083;
   margin-top: 5px;
+  padding-right: 13px;
   cursor: pointer;
 }
 .icons-container .each-icon {
@@ -35,7 +36,7 @@
   text-align: center;
   margin-left: 15px;
   margin-top: 0;
-  margin-top: -3px;
+  margin-top: -5px;
 }
 .company-account p {
   font-size: 16px;
