--- a/src/scenes/global/topbar/Topbar.less
+++ b/src/scenes/global/topbar/Topbar.less
@@ -27,7 +27,9 @@
     font-size: 20px;
     color: @text-grey;
     margin-top: 5px;
+    padding-right: 13px;
     cursor: pointer;
+    
 }
 
 .icons-container .each-icon {
@@ -51,7 +53,7 @@
     text-align: center;
     margin-left: 15px;
     margin-top: 0; 
-    margin-top: -3px;
+    margin-top: -5px;
    
 
 }
